crates/swc_ecma_parser/tests/test262-error-references/fail/68f0106ad505b13f.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/68f0106ad505b13f.js:1:13
  |
1 | while(false)
  |             ^

